[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/game_logic/node_attachment/FadeTimer.gd" type="Script" id=1]

[node name="FadeTimer" type="Timer"]
wait_time = 5.0
one_shot = true
script = ExtResource( 1 )

[node name="FadeTimerTween" type="Tween" parent="."]
[connection signal="refresh_visibility" from="." to="." method="_on_FadeTimer_refresh_visibility"]
[connection signal="timeout" from="." to="." method="_on_FadeTimer_timeout"]
